[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://button.tres" type="Theme" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -34.0
margin_right = 90.0
margin_bottom = 34.0

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 70.0
margin_bottom = 17.0
focus_neighbour_top = NodePath("../Exit")
theme = ExtResource( 2 )
custom_colors/font_color_focus = Color( 0.85098, 0.764706, 0.188235, 1 )
custom_colors/font_color_hover = Color( 0.85098, 0.764706, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.231373, 0.619608, 0.152941, 1 )
text = "Start"
align = 0

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 21.0
margin_right = 70.0
margin_bottom = 38.0
theme = ExtResource( 2 )
custom_colors/font_color_focus = Color( 0.85098, 0.764706, 0.188235, 1 )
custom_colors/font_color_hover = Color( 0.85098, 0.764706, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.231373, 0.619608, 0.152941, 1 )
text = "Keymap"
align = 0

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 70.0
margin_bottom = 59.0
focus_neighbour_bottom = NodePath("../Start")
theme = ExtResource( 2 )
custom_colors/font_color_focus = Color( 0.85098, 0.764706, 0.188235, 1 )
custom_colors/font_color_hover = Color( 0.85098, 0.764706, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.231373, 0.619608, 0.152941, 1 )
text = "Exit"
align = 0

[connection signal="mouse_entered" from="VBoxContainer/Start" to="." method="_on_Start_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Options" to="." method="_on_Options_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
